alterei "Alguma coisa"
fiz alterações colocando "Alguma coisa"

--- a/index.html
+++ b/index.html
@@ -153,5 +153,17 @@
     </table>
 
 </body>
+    <h1>ALGUMA TERCEIRA COISA</h1>
+    <h3>estou com sono, e sem criatividade então... essa é "Alguma terceira coisa dois". :3</h3>
+    <table>
+        <tr>
+            <td>Alguma coisa</td>
+            <td>Alguma coisa dois</td>
+        </tr>
 
+        <tr>
+            <td>Alguma segunda coisa</td>
+            <td>Alguma segunda coisa dois</td>
+        </tr>
+    </table>
 </html>
